--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "version": "0.1.1",
   "type": "module",
   "license": "GPL-3.0-or-later",
+  "homepage": "https://github.com/BigPurpleGoose/lumat-color",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist --dotfiles"
+    "predeploy": " npm run build",
+    "deploy": "npm run build && gh-pages -d dist --dotfiles"
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.2",
