--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "homepage": "https://github.com/BigPurpleGoose/lumat-color",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build --base=./",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": " npm run build",
